--- a/power-2.0/LT3751/LT3751 Design Notes.tex
+++ b/power-2.0/LT3751/LT3751 Design Notes.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 	\maketitle
-	\noindent This document will contain the design process for the LT3751 flyback converter. It is to be used alongside (not in place of) the LT3571 data sheet. Thunderbots uses this converter as a 24V - 240V capacitor charger. \\
+	\noindent This document will contain the design process for the LT3751 flyback converter. It is to be used alongside (not in place of) the LT3751 data sheet. Thunderbots uses this converter as a 24V - 240V capacitor charger. \\
 	
 	\begin{figure}[h!]
 		\includegraphics[width=\linewidth]{LT3571_Tbots_Configuration.png}
@@ -35,8 +35,8 @@
 	
 	\noindent \textbf{Note: Resistor values are calculated values and need to be updated with standard resistor values}
 	
-	\subsection{RVout}
-	RVout is used as the transformer supply sense pin. The resistor $RV_{trans}$ is placed between $V_{trans}$ and the pin. See Section 2 for instructions on setting $RV_{out}$.
+	\subsection{RVtrans}
+	RVtrans is used as the transformer supply sense pin. The resistor $R_{trans}$ is placed between $V_{trans}$ and the pin. See Section 2 for instructions on setting $RV_{out}$.
 	
 	\subsection{UVLO1, OVLO1, UVLO2, OVLO2}
 	These four pins serve similar purposes, so they will be covered in the same section. UVLO1 and OVLO1 are the $V_{trans}$ undervoltage/overvoltage detection pins and will raise a fault signal when $V_{trans}$ drops below 18V or goes above 26V. They are connected to $V_{trans}$ via $R_{UVLO1}$ and $R_{OVLO1}$, which are calculated as per page 7 of the data sheet:
@@ -78,7 +78,7 @@
 	This pin is really important because it sets the output voltage! Connect to ground via the $R_{BG}$ resistor. See section 2 for instructions on setting this resistor value.
 	
 	\subsection{RVout}
-	Output voltage sense pin. Pretty self-explanatory. Connect to the external NMOS drain via the $RV_{out}$ resistor. See section 2 for instructions on setting this resistor value.
+	Output voltage sense pin. Pretty self-explanatory. Connect to the external NMOS drain via the $R_{out}$ resistor. See section 2 for instructions on setting this resistor value.
 	
 	\subsection{RDCM}
 	Discontinuous mode sense pin. Determines when to initiate the next switch cycle. Connect to the external NMOS drain via the $R_{DCM}$ resistor. See section 2 for instructions on setting this resistor value.
@@ -87,8 +87,8 @@
 	It's ground. Hype.
 	
 	\section{External Resistors}
-	\subsection{RVTrans, RVout, and RDCM}
-	The values of $RV_{trans}, RV_{out}, \text{and } R_{DCM}$ are set based on $V_{trans}$ and $\Delta V_{Drain}$, where $\Delta V_{Drain}$ is the difference between $V_{Drain}$ (the drain of the external NMOS) and $V_{trans}$. I couldn't figure out how to analytically find $V_{Drain}$, but simulations showed that it peaked at 48V in our setup and was dependant on $V_{out}$. We use this value for $\Delta V_{Drain}$:
+	\subsection{RTrans, Rout, and RDCM}
+	The values of $R_{trans}, R_{out}, \text{and } R_{DCM}$ are set based on $V_{trans}$ and $\Delta V_{Drain}$, where $\Delta V_{Drain}$ is the difference between $V_{Drain}$ (the drain of the external NMOS) and $V_{trans}$. I couldn't figure out how to analytically find $V_{Drain}$, but simulations showed that it peaked at 48V in our setup and was dependant on $V_{out}$. We use this value for $\Delta V_{Drain}$:
 	\[\Delta V_{Drain} = V_{Drain} - V_{trans} = 48V - 24V = 24V\]
 	and compare it to Table 2 in the data sheet (pg 17):
 	
@@ -96,7 +96,7 @@
 		\includegraphics[width=\linewidth]{LT3571_Resistor_Values.png}
 	\end{figure}
 
-	\noindent Based on the table, $RV_{trans} = 25.5k\Omega, RV_{out} = 25.5k\Omega, \text{and } R_{DCM} = 11.5k\Omega$. These are also the values RoboJackets use so that's probably a good sign.
+	\noindent Based on the table, $R_{trans} = 25.5k\Omega, R_{out} = 25.5k\Omega, \text{and } R_{DCM} = 11.5k\Omega$. These are also the values RoboJackets use so that's probably a good sign.
 
 	\subsection{RBG}
 	With the other resistors selected, $R_{BG}$ is calculated as follows (as per pg 45 of the data sheet):
@@ -108,7 +108,7 @@
 	$I_{pk}$ is the main criteria for selecting the transformer. The CoilCraft DA-2034-AL is one of the transformers recommended by the LT3751 manufacturers (table 1 of the data sheet). It is the current frontrunner because of its ability to handle up to 10A on the primary, 1:10 ratio, and relatively small size. \textbf{Not available on digikey though (is available on Mouser).} This transformer is currently used by RoboJackets, while the similar CoilCraft DA-2032-AL is used by Mannheim ($I_{pk} = 5A$ for this transformer).
 	\subsection{Output Diode}
 	The output diode is selected based on the maximum repetitive reverse voltage ($V_{RRM}$) and the average forward current $I_{Av}$. The diode must meet the following requirements:
-	\[V_{RRM} > V_{out} + N*V_{trans} = 240V + 240V  = 480V\]
+	\[V_{RRM} > V_{out} + N*V_{trans} = 240V + 10(24V)  = 480V\]
 	\[I_{Av} > \dfrac{I_pk}{2N} = \dfrac{10A}{2*20} = 0.5A\]  
 	The Fairchild ES3J is one of the diodes recommended by the LT3751 manufacturers (table 4 in the data sheet). It meets our requirements, has a low $t_{rr}$, and Mannheim uses it. 
 	\subsection{External NMOS}
